2007-11-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -deleteWithBaseSequence:]): an email was
	sent when modifying an event, when the event was considered
	relevant. The same thing is now implemented for event deletion.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): make sure that the deserialized "values"
	is an instance of NSMutableDictionary, otherwise we override it
	with one.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForReply]): make use of the SOGoMailReply WO page.

	* SoObjects/Mailer/SOGoMailReply.[hm]: new class module copied
	from SOGoMailForward to handle mail replies instead. Only three
	methods remaining: date, from and messageBody. The latter is
	quoted properly.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-fetchMailForForwarding:sourceMail]): fetch attachments for
	forwarded messages.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-hasMessageAttachment]): initialize hasAttachment with "NO" to
	avoid false positives.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor -extractQuickFieldsFromEvent:_event])
	([OCSiCalFieldExtractor -extractQuickFieldsFromTodo:_task]):
	set title to an empty string where the event/task summary is null.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-setHeaders:newHeaders]): make sure there is a message id in the
	headers dictionary, if not, generate one.
	([SOGoDraftObject -fetchMailForEditing:sourceMail]): retrieve the
	message id from the existing draft.
	([SOGoDraftObject -mimeHeaderMapWithHeaders:_headers]): store the
	message id in the header map.

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-deleteFolderAction]): no longer prefix the target folder with
	"folder".

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-listMailboxesAction]): base the folder type on the folder
	traversal path.
